--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^3.0.1",
     "klaw-sync": "^2.1.0",
     "mustache": "^2.3.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "zip-a-folder": "^0.1.0"
   }
 }
